Fix banner alignment

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -13,6 +13,7 @@ h2
 
 h3
   font-size: 16px
+  margin-top: 4px
 
 .footer-image
   margin-left: auto
